# Bot

./: .env.example  .env.local  .railwayignore  .replit  BOT_ZEUS_CHECKLIST_FINAL.md  CHANGELOG_FINAL.md  CORRIGIDO_FINAL.md  DEPLOYMENT_GUIDE.md  DEPLOY_RENDER_FINAL.md  ERRO_RENDER_CORRIGIDO.md  FINAL_SETUP.md  KEEP_ALIVE_INSTRUCTIONS.md  RAILWAY_PYTHON_SETUP.md  RAILWAY_SETUP.md  README-RENDER.md  RENDER_AUDIOOP_FIX.md  RENDER_CORRIGIDO.md  RENDER_DEPLOY.md  RENDER_DEPLOY_COMPLETO.md  RENDER_FIX.md  RENDER_GUIA_COMPLETO.md  RENDER_SETUP.md  RENDER_SOLUCAO_FINAL.md  START_AUTO_RESTART.md  UPTIME_CONFIG.md  auto-restart-wrapper.sh  auto-restart.js  cyclic-deployment-essentials.md  main.py  main.py.OPTIMIZATION_NOTES.md  pyproject.toml  railway.toml  render.yaml  replit.md  requirements-render.txt  requirements.txt  run_bot.sh  start.sh  start_bot.sh  watch_node.py  (+1 more)
attached_assets/: FilaMediatorPing_1763594997075_1763716643048.git-COMMIT_EDITMSG  FilaMediatorPing_1763594997128_1763715750727.git-index  FilaMediatorPing_1763594997157_1763716643107.git-refs-remotes-gitsafe-backup-main  FilaMediatorPing_1763594997171_1763716709031.git-refs-heads-replit-agent  FilaMediatorPing_1763594997190_1763716643074.git-refs-heads-main  FilaMediatorPing_1763594997206_1763716643084.git-objects-fe-24ee3df4a2ea8bd6049495f89a2e00d5dce94a  FilaMediatorPing_1763594997225_1763716643119.git-objects-fb-871f5eb128af6d0c4d73f74bf0ce259740117a  FilaMediatorPing_1763594997242_1763715750799.git-objects-fb-88a69b65ea485a86006025a8fd247e53862709  bot_zeus_1763594997002_1763716642958.db  (+9 more)
bot/: bot_zeus.db  (+3 more)
(+43 files in other folders)
