[project]
name = "bot-zeus-discord"
version = "1.0.0"
description = "Bot Zeus - Discord Gaming Queue Management System"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.1",
    "discord-py>=2.6.4",
    "matplotlib>=3.10.7",
    "pillow>=12.0.0",
    "python-dotenv>=1.2.1",
    "qrcode>=8.2",
]
